Fixes #1734, floats disappear in stackable grid on mobile

--- a/src/definitions/collections/grid.less
+++ b/src/definitions/collections/grid.less
@@ -1677,6 +1677,7 @@
     width: auto !important;
     margin: 0em 0em !important;
     box-shadow: none !important;
+    float: none !important;
     padding: (@stackableRowSpacing / 2) (@stackableGutter / 2) !important;
   }
   .ui.stackable.grid > .row {
